<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layoutDirection="ltr"
    android:id="@+id/setPinRootLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:theme="@style/ThemeOverlay.NICardManagementSDK.DialogTheme.Auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="?backgroundColorCustom"
        android:animateLayoutChanges="true">

        <ae.network.nicardmanagementsdk.presentation.views.CustomBackNavigationView
            android:id="@+id/customBackNavigationView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/titleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:gravity="center_horizontal"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat"
            android:textColor="?textColorCustom"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/customBackNavigationView" />

        <!-- Number buttons 1-9 (all data binding expressions removed) -->
        <Button
            android:id="@+id/oneButton"
            style="@style/Widget.NICardManagementSDK.Button.Pin.Number"
            android:layout_marginBottom="16dp"
            android:text="@string/_1"
            app:layout_constraintBottom_toTopOf="@+id/fourButton"
            app:layout_constraintEnd_toStartOf="@+id/twoButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintVertical_chainStyle="packed"
            tools:ignore="TextContrastCheck" />

        <!-- Similar buttons for 2, 3, 4, 5, 6, 7, 8, 9 -->
        <Button
            android:id="@+id/twoButton"
            style="@style/Widget.NICardManagementSDK.Button.Pin.Number"
            android:text="@string/_2"
            app:layout_constraintBottom_toBottomOf="@+id/oneButton"
            app:layout_constraintEnd_toStartOf="@+id/threeButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/oneButton"
            app:layout_constraintTop_toTopOf="@+id/oneButton"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/threeButton"
            style="@style/Widget.NICardManagementSDK.Button.Pin.Number"
            android:text="@string/_3"
            app:layout_constraintBottom_toBottomOf="@+id/twoButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/twoButton"
            app:layout_constraintTop_toTopOf="@+id/twoButton"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/fourButton"
            style="@style/Widget.NICardManagementSDK.Button.Pin.Number"
            android:layout_marginBottom="16dp"
            android:text="@string/_4"
            app:layout_constraintBottom_toTopOf="@+id/sevenButton"
            app:layout_constraintEnd_toStartOf="@+id/fiveButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/oneButton"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/fiveButton"
            style="@style/Widget.NICardManagementSDK.Button.Pin.Number"
            android:text="@string/_5"
            app:layout_constraintBottom_toBottomOf="@+id/fourButton"
            app:layout_constraintEnd_toStartOf="@+id/sixButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/fourButton"
            app:layout_constraintTop_toTopOf="@+id/fourButton"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/sixButton"
            style="@style/Widget.NICardManagementSDK.Button.Pin.Number"
            android:text="@string/_6"
            app:layout_constraintBottom_toBottomOf="@+id/fiveButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/fiveButton"
            app:layout_constraintTop_toTopOf="@+id/fiveButton"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/sevenButton"
            style="@style/Widget.NICardManagementSDK.Button.Pin.Number"
            android:layout_marginBottom="16dp"
            android:text="@string/_7"
            app:layout_constraintBottom_toTopOf="@+id/doneImageButton"
            app:layout_constraintEnd_toStartOf="@+id/eightButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/fourButton"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/eightButton"
            style="@style/Widget.NICardManagementSDK.Button.Pin.Number"
            android:text="@string/_8"
            app:layout_constraintBottom_toBottomOf="@+id/sevenButton"
            app:layout_constraintEnd_toStartOf="@+id/nineButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/sevenButton"
            app:layout_constraintTop_toTopOf="@+id/sevenButton"
            tools:ignore="TextContrastCheck" />

        <Button
            android:id="@+id/nineButton"
            style="@style/Widget.NICardManagementSDK.Button.Pin.Number"
            android:text="@string/_9"
            app:layout_constraintBottom_toBottomOf="@+id/eightButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/eightButton"
            app:layout_constraintTop_toTopOf="@+id/eightButton"
            tools:ignore="TextContrastCheck" />

        <!-- Done button - removed android:clickable/focusable binding -->
        <ImageButton
            android:id="@+id/doneImageButton"
            style="@style/Widget.NICardManagementSDK.Button.Pin.ImageButton"
            android:theme="@style/ThemeOverlay.NICardManagementSDK.Button.Pin.ImageButton"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/done_image_content_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/zeroButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/sevenButton"
            app:srcCompat="@drawable/ic_baseline_check_24"
            tools:ignore="RedundantDescriptionCheck" />

        <Button
            android:id="@+id/zeroButton"
            style="@style/Widget.NICardManagementSDK.Button.Pin.Number"
            android:text="@string/_0"
            app:layout_constraintBottom_toBottomOf="@+id/doneImageButton"
            app:layout_constraintEnd_toStartOf="@+id/backspaceImageButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/doneImageButton"
            app:layout_constraintTop_toTopOf="@+id/doneImageButton"
            tools:ignore="TextContrastCheck" />

        <ImageButton
            android:id="@+id/backspaceImageButton"
            style="@style/Widget.NICardManagementSDK.Button.Pin.ImageButton"
            android:contentDescription="@string/backspace_image_content_description"
            android:backgroundTint="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="@+id/zeroButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/zeroButton"
            app:layout_constraintTop_toTopOf="@+id/zeroButton"
            app:srcCompat="@drawable/ic_outline_backspace_24"
            app:tint="?textColorCustom"
            tools:ignore="RedundantDescriptionCheck,ImageContrastCheck" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            android:contentDescription="@string/recycler_view_content_description"
            app:layout_constraintBottom_toTopOf="@+id/oneButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/titleTextView"
            tools:itemCount="6"
            tools:listitem="@layout/set_pin_bullet_item" />

        <!-- Overlay FrameLayout - visibility set programmatically -->
        <FrameLayout
            android:id="@+id/overlayFrameLayout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/black_30"
            android:clickable="true"
            android:focusable="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="gone">

            <ProgressBar
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:theme="@style/ThemeOverlay.NICardManagementSDK.ProgressBar" />

        </FrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>
